scroll top image added

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -17492,6 +17492,7 @@ display: block;
 }
 .scroll-top-container .title-scroll-top img{
     margin-right: 5px;
+    content: url(../images/scroll-top.svg);
 }
 .data-body-sec .carousel{
     width: 100%;
