Testing in old result tEmplate

--- a/findly-builder/src/app/components/search-interface/search-interface.component.html
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.html
@@ -261,9 +261,9 @@
                   <div class="kr-sg-input-text  customize-right mt-3" style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable" [ngClass]="{'disable-url': !customizeTemplateObj.template.searchResultlayout.clickable }">
                     <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1">
                       <div class="label-text">{{'resultTemplate.URL' | translate}}</div>
-                      <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
+                      <div #parentID class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
                         <button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>    
-                        <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.url.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keyup)="searchlist('url',$event.target.value,fieldData)" (focus)="searchlist('url',$event.target.value,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.url">
+                        <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.url.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keypress)="searchlist('url',$event.target.value,$event,parentID,fieldData)" (focus)="searchlist('url',$event.target.value,$event,parentID,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.url">
                         <img *ngIf="(!customizeTemplateObj.template.resultMapping.url.length) && submitted" id="headingFieldWarning" src="assets/icons/warning_escalation.svg" style="top: 32%; position: absolute; right: 2.5%; display: block;" height="12" width="12" />
                         <img src="assets/icons/search-interface/search.svg" class="search-icon">                                                           
                         <ul class="dropdown-menu content-menu scroll-max-250">
@@ -316,9 +316,9 @@
                   <div class="kr-sg-input-text customize-right mt-3" style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable">
                     <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1">
                       <div class="label-text">{{'resultTemplate.URL' | translate}}</div>
-                      <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
+                      <div #parentID class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
                         <button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>    
-                        <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.url.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keyup)="searchlist('url',$event.target.value,fieldData)" (focus)="searchlist('url',$event.target.value,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.url">
+                        <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.url.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keypress)="searchlist('url',$event.target.value,$event,parentID,fieldData)" (focus)="searchlist('url',$event.target.value,$event,parentID,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.url">
                         <img *ngIf="(!customizeTemplateObj.template.resultMapping.url.length) && submitted" id="headingFieldWarning" src="assets/icons/warning_escalation.svg" style="top: 32%; position: absolute; right: 2.5%; display: block;" height="12" width="12" />
                         <img src="assets/icons/search-interface/search.svg" class="search-icon">                                                           
                         <ul class="dropdown-menu content-menu scroll-max-250">
@@ -371,9 +371,9 @@
                   <div class="kr-sg-input-text customize-right mt-3" style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable">
                     <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1">
                       <div class="label-text">{{'resultTemplate.URL' | translate}}</div>
-                      <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
+                      <div #parentID class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
                         <button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>    
-                        <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.url.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keyup)="searchlist('url',$event.target.value,fieldData)" (focus)="searchlist('url',$event.target.value,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.url">
+                        <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.url.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keypress)="searchlist('url',$event.target.value,$event,parentID,fieldData)" (focus)="searchlist('url',$event.target.value,$event,parentID,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.url">
                         <img src="assets/icons/search-interface/search.svg" class="search-icon">
                         <img *ngIf="(!customizeTemplateObj.template.resultMapping.url.length) && submitted" id="headingFieldWarning" src="assets/icons/warning_escalation.svg" style="top: 32%; position: absolute; right: 2.5%; display: block;" height="12" width="12" />
                         <ul class="dropdown-menu content-menu scroll-max-250">
@@ -420,9 +420,9 @@
                   <div class="kr-sg-input-text  customize-right mt-3" style="padding: 0;" *ngIf="customizeTemplateObj.template.searchResultlayout.clickable">
                     <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1">
                       <div class="label-text">{{'resultTemplate.URL' | translate}}</div>
-                      <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
+                      <div #parentID class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
                         <button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>    
-                        <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.url.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keyup)="searchlist('url',$event.target.value,fieldData)"  (focus)="searchlist('url',$event.target.value,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.url">
+                        <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.url.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keypress)="searchlist('url',$event.target.value,$event,parentID,fieldData)"  (focus)="searchlist('url',$event.target.value,$event,parentID,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.url">
                         <img *ngIf="(!customizeTemplateObj.template.resultMapping.url.length) && submitted" id="headingFieldWarning" src="assets/icons/warning_escalation.svg" style="top: 32%; position: absolute; right: 2.5%; display: block;" height="12" width="12" />
                         <img src="assets/icons/search-interface/search.svg" class="search-icon">                                                           
                         <ul class="dropdown-menu content-menu scroll-max-250">
@@ -446,9 +446,9 @@
             <div class="label-text mb-1">{{'resultTemplate.searchResultMapping' | translate}}</div>
             <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1">
               <div class="label-text">{{'resultTemplate.heading' | translate}}</div>
-              <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
+              <div #parentID class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
                   <button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>    
-                  <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.heading.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keyup)="searchlist('heading',$event.target.value,fieldData)" (focus)="searchlist('heading',$event.target.value,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.heading">
+                  <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.heading.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keypress)="searchlist('heading',$event.target.value,$event,parentID,fieldData)" (focus)="searchlist('heading',$event.target.value,$event,parentID,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.heading">
                   <img *ngIf="(!customizeTemplateObj.template.resultMapping.heading.length) && submitted" id="headingFieldWarning" src="assets/icons/warning_escalation.svg" style="top: 32%; position: absolute; right: 2.5%; display: block;" height="12" width="12" />
                   <img src="assets/icons/search-interface/search.svg" class="search-icon">                                                           
                   <ul class="dropdown-menu content-menu scroll-max-250">
@@ -466,9 +466,9 @@
             </div>
             <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1" *ngIf="showDescription">
               <div class="label-text">{{'resultTemplate.description' | translate}}</div>
-              <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
+              <div #parentID class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
                   <button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>    
-                  <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.description.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keyup)="searchlist('description',$event.target.value,fieldData)" (focus)="searchlist('description',$event.target.value,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.description">
+                  <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.description.length) && submitted)" data-toggle="dropdown" autocomplete="off" (keypress)="searchlist('description',$event.target.value,$event,parentID,fieldData)" (focus)="searchlist('description',$event.target.value,$event,parentID,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.description">
                   <img *ngIf="(!customizeTemplateObj.template.resultMapping.description.length) && submitted" id="descriptionFieldWarning" src="assets/icons/warning_escalation.svg" style="top: 32%; position: absolute; right: 2.5%; display: block;" height="12" width="12" />
                   <img src="assets/icons/search-interface/search.svg" class="search-icon">                                                           
                   <ul class="dropdown-menu content-menu scroll-max-250">
@@ -486,9 +486,9 @@
             </div>
             <div class="kr-sg-dropdowns seach-with-dropdown mb-3 pb-1" *ngIf="showImage">
               <div class="label-text">{{'resultTemplate.image' | translate}}</div>
-              <div class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
+              <div #parentID class="kr-sg-input-inline-search dropdown dropdown-open line-height-0">
                   <button class="dropdown-toggle dropdown-input search-with-dropdown" data-toggle="dropdown"></button>    
-                  <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.image.length) && submitted)"  data-toggle="dropdown" autocomplete="off" (keyup)="searchlist('image',$event.target.value,fieldData)" (focus)="searchlist('image',$event.target.value,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.image">
+                  <input type="text" maxlength="60" placeholder="Select Field" class="input-search dropdown-toggle dropdown-input" [class.err-block]="((!customizeTemplateObj.template.resultMapping.image.length) && submitted)"  data-toggle="dropdown" autocomplete="off" (keypress)="searchlist('image',$event.target.value,$event,parentID,fieldData)" (focus)="searchlist('image',$event.target.value,$event,parentID,fieldData)" [(ngModel)]="customizeTemplateObj.template.resultMapping.image">
                   <img *ngIf="(!customizeTemplateObj.template.resultMapping.image.length) && submitted" id="imageFieldWarning" src="assets/icons/warning_escalation.svg" style="top: 32%; position: absolute; right: 2.5%; display: block;" height="12" width="12" />
                   <img src="assets/icons/search-interface/search.svg" class="search-icon">                                                           
                   <ul class="dropdown-menu content-menu scroll-max-250">
