carousel ui issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -2923,6 +2923,7 @@ display: none !important;
   .sdk-top-down-interface .slide{
     padding: 6px;
     width: 280px !important;
+    float: left;
 }
 .sdk-top-down-interface .scroll-top-container{
   position: fixed;
