--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.html
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.html
@@ -68,7 +68,7 @@
                             <div class="content">
                                 <div class="title">{{'metrics.user_engagement.Repeat_Users'| translate}}<span class="clicks">
                                 </span>
-                                <img src="assets/icons/gray_info.svg" placement="top-center" ngbTooltip="Number of returning users performed search during the selected period" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1">
+                                <img src="assets/icons/gray_info.svg" placement="top-center" ngbTooltip="Number of unique users who performed search during the selected period" [container]="'body'" tooltipClass="dashboard-custom-tooltips" class="pl-1">
                             </div>
                                 <div class="count-data " >
                                     <span class="count">{{repeatUser}}
